Changes in Padre::Plugin::PHP

	00-load.t added (CHORNY)

v0.03	2009.11.08
	Fixed a bug in the preferences dialog
	Added a PHP menu to the menu bar

v0.02	2009.11.01
	Configurable PHP interpreter and args (SEWI)
	Run PHP scripts in normal and debug mode (SIRIUS_BLACK)
	Autcomplete features (SEWI)
	Auto clean tailing spaces and other things on save (SEWI)
	Many other things (various authors)

v0.01
	First version released